# Small-Qwen-Coding-Multiple-Choice

./: .env.example  .gitignore  .pre-commit-config.yaml  LEGACY.md  MODEL_CARD.md  README.md  README.md.new  git_acp.sh  pyproject.toml  requirements.simple.txt  requirements.txt  requirements_minimal.txt  requirments_full.txt  train.sh  train_fixed.sh
.github/workflows/: code-quality.yml  model-training.yml  publish.yml  tests.yml
app/: README.md  app.py  app_zero_gpu.py  examples.py  requirements.full.txt  requirements.space.txt  requirements.txt  run_app.sh  run_simple.py
experiment_output/quick_test_20250402_134642/: experiment_config.txt  run_with_callbacks.py
experiment_output/quick_test_20250402_134655/: experiment_config.txt  run_with_callbacks.py
experiment_output/quick_test_20250402_134739/: experiment_config.txt  run_with_callbacks.py
legacy_references/: train.ipynb
legacy_references/function/: args.py  arguments.py  (+10 more)
notebooks/: inference_batch.ipynb  inference_examples.ipynb  inference_streaming.ipynb  usage_notebook.ipynb
project/: STRUCTURE.md  __init__.py  config.py  requirements.txt
references/: Qwen2.5_Coder.py  full.py  gpt4o_generated.py  train.py
scripts/: train_batch32.sh  train_experiment.sh  train_fixed.sh  train_with_callbacks.sh
src/: __init__.py  config.py  inference_demo.py  optimize_and_benchmark.py  run.py  train.py
tests/: test_app.py  test_train.py  test_workflow.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothDDPOTrainer.py  UnslothGRPOTrainer.py  UnslothOnlineDPOTrainer.py
(+115 files in other folders)
